# MAVSDK

examples/camera/: camera.cpp
examples/codev/: CMakeLists.txt  camera_r3.cpp
examples/gimbal/: gimbal.cpp
examples/gimbal_full_control/: gimbal_full_control.cpp
src/mavsdk/core/: CMakeLists.txt  call_every_handler.cpp  call_every_handler.h  callback_list_impl.h  cli_arg.cpp  cli_arg.h  connection.cpp  connection.h  curl_wrapper.cpp  curl_wrapper.h  http_loader.cpp  http_loader.h  mavlink_command_receiver.cpp  mavlink_command_receiver.h  mavlink_parameter_cache.cpp  mavlink_parameter_client.cpp  mavlink_parameter_server.cpp  mavlink_parameter_server.h  mavlink_parameter_subscription.cpp  mavlink_parameter_subscription.h  mavsdk.cpp  mavsdk_impl.cpp  mavsdk_impl.h  param_value.cpp  param_value.h  ping.cpp  ping.h  server_component_impl.cpp  server_component_impl.h  system_impl.cpp  system_impl.h  udp_connection.cpp  udp_connection.h
src/mavsdk/plugins/action/: CMakeLists.txt  action_impl.cpp
src/mavsdk/plugins/action_server/: CMakeLists.txt
src/mavsdk/plugins/calibration/: CMakeLists.txt
src/mavsdk/plugins/camera/: CMakeLists.txt  camera_definition.cpp  camera_definition.h  camera_impl.cpp
src/mavsdk/plugins/camera_server/: CMakeLists.txt  camera_server_impl.cpp  camera_server_impl.h
src/mavsdk/plugins/component_information/: CMakeLists.txt
src/mavsdk/plugins/component_information_server/: CMakeLists.txt
src/mavsdk/plugins/failure/: CMakeLists.txt
src/mavsdk/plugins/follow_me/: CMakeLists.txt
src/mavsdk/plugins/ftp/: CMakeLists.txt
src/mavsdk/plugins/ftp_server/: CMakeLists.txt
src/mavsdk/plugins/geofence/: CMakeLists.txt
src/mavsdk/plugins/gimbal/: CMakeLists.txt
src/mavsdk/plugins/gripper/: CMakeLists.txt
src/mavsdk/plugins/info/: CMakeLists.txt
src/mavsdk/plugins/log_files/: CMakeLists.txt
src/mavsdk/plugins/manual_control/: CMakeLists.txt
src/mavsdk/plugins/mavlink_passthrough/: CMakeLists.txt  mavlink_passthrough_impl.cpp  mavlink_passthrough_impl.h
src/mavsdk/plugins/mission/: CMakeLists.txt  mission.cpp  mission_impl.cpp  mission_impl.h
src/mavsdk/plugins/mission_raw/: CMakeLists.txt  mission_raw_impl.cpp  mission_raw_impl.h
src/mavsdk/plugins/mission_raw_server/: CMakeLists.txt
src/mavsdk/plugins/mocap/: CMakeLists.txt
src/mavsdk/plugins/offboard/: CMakeLists.txt
src/mavsdk/plugins/param/: CMakeLists.txt  param_impl.cpp  param_impl.h
src/mavsdk/plugins/param_server/: CMakeLists.txt
src/mavsdk/plugins/rtk/: CMakeLists.txt
src/mavsdk/plugins/tune/: CMakeLists.txt
(+9 files in other folders)
